🐛Resolved Loader Issue on Firefox and Microsoft Edge

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -132,6 +132,7 @@
     }
     100% {
         display: none;
+        visibility: hidden;
         opacity: 0;
     }
 }
